# lemmy-thumbnail-cleaner

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml
src/: main.rs
